изменение синтаксиса оператора выбора
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/03-Лексика.tex
+++ b/doc/report/03-Лексика.tex
@@ -99,9 +99,9 @@
 \begin{tabular}[c]{*{5}{p{2cm}}}
 авария &    иначе &    мб &               пока       & типа    \\
 вернуть &  импорт &  модуль &        прервать & фн     \\
-вход &       класс &     надо &            пусть       &        \\
-если &       когда &     настройка &   позже      &        \\                                        
-есть &        конст &    осторожно &  тип          &        \\
+вход  &      класс &     надо &            пусть       &        \\
+выбор &     когда &     настройка &   позже      &        \\                                        
+если  &      конст &    осторожно &  тип          &        \\
 \end{tabular}
 
 
