--- a/doc/report/06-Операторы.tex
+++ b/doc/report/06-Операторы.tex
@@ -9,7 +9,7 @@
     | Простой-оператор
     | Оператор-если
     | Оператор-надо
-    | Оператор-когда
+    | Оператор-выбор
     | Оператор-пока
     | Оператор-вернуть
     | Оператор-прервать
@@ -178,37 +178,37 @@
 надо число > 1 иначе вернуть 1
 \end{Trivil}
 
-\hypertarget{when-stmt}{%
-\subsection{Оператор 'когда' или оператор выбора}\label{stmt:when-stmt}}
+\hypertarget{switch-stmt}{%
+\subsection{Оператор 'выбор'}\label{stmt:switch-stmt}}
 
-Оператор \keyword{когда} выбирает одну ветвь выполнения из нескольких вариантов, в соответствии со значением выражения.
+Оператор \keyword{выбор} выбирает одну ветвь выполнения из нескольких вариантов, в соответствии со значением выражения.
 
 \bigskip
 \TBD: Добавить предикатный и оператор выбора по типу?
 
 \begin{Grammar}
-Оператор-когда: 
-    'когда' Выражение '{'
+Оператор-выбор: 
+    'выбор' Выражение '{'
     Вариант*
     ('иначе' Список-операторов?)?
     '}'
 Вариант:
-    'есть' Выражение (',' Выражение)* ':' Список-операторов?
+    'когда' Выражение (',' Выражение)* ':' Список-операторов?
 \end{Grammar}
 
-При выполнении оператора \keyword{когда} вычисляется \emph{Выражение},
+При выполнении оператора \keyword{выбор} вычисляется \emph{Выражение},
 затем выражения в \emph{Вариантах} вычисляются слева направо и сверху вниз. 
 Как только значение выражения \emph{Варианта} стало равным значению первого выражения, выполняется список операторов этого \emph{Варианта}.
 Остальные варинты игнорируются.
 Если ни один из вариантов не выполнен, и есть ветка \keyword{иначе}, выполняется список операторов этой ветки.
 
-Тип каждого выражения в вариантах должен быть равен типу первого выражения (\See{compat:equal-types}).
+Тип каждого выражения в вариантах должен быть равен эквивалентен типу первого выражения (\See{compat:equal-types}).
 
 \begin{Trivil}
-когда х {
-есть 0: вернуть "ничего"
-есть 1: вернуть "один"
-есть 2: вернуть "два"
+выбор х {
+когда 0: вернуть "ничего"
+когда 1: вернуть "один"
+когда 2: вернуть "два"
 иначе вернуть "много"
 }
 \end{Trivil}
