--- a/doc/report/06-Операторы.tex
+++ b/doc/report/06-Операторы.tex
@@ -181,14 +181,11 @@
 \hypertarget{switch-stmt}{%
 \subsection{Оператор 'выбор'}\label{stmt:switch-stmt}}
 
-Оператор \keyword{выбор} выбирает одну ветвь выполнения из нескольких вариантов, в соответствии со значением выражения.
-
-\bigskip
-\TBD: Добавить предикатный и оператор выбора по типу?
+Оператор \keyword{выбор} выбирает одну ветвь выполнения из нескольких вариантов.
 
 \begin{Grammar}
 Оператор-выбор: 
-    'выбор' Выражение '{'
+    'выбор' Выражение? '{'
     Вариант*
     ('иначе' Список-операторов?)?
     '}'
@@ -196,9 +193,18 @@
     'когда' Выражение (',' Выражение)* ':' Список-операторов?
 \end{Grammar}
 
-При выполнении оператора \keyword{выбор} вычисляется \emph{Выражение},
+Если  \emph{Выражение} после ключевого слова \keyword{выбор} задано, 
+то выбор идет по по значению этого выражения (\See{stmt:switch-stmt-expr}), иначе выбор по предикатам (\See{stmt:switch-stmt-predicate}).
+
+\bigskip
+\TBD: Добавить оператор выбора по типу?
+
+\hypertarget{switch-stmt-expr}{%
+\subsubsection{Оператор 'выбор' по выражению}\label{stmt:switch-stmt-expr}}
+
+При выполнении оператора \keyword{выбор} вычисляется \emph{Выражение} оператора,
 затем выражения в \emph{Вариантах} вычисляются слева направо и сверху вниз. 
-Как только значение выражения \emph{Варианта} стало равным значению первого выражения, выполняется список операторов этого \emph{Варианта}.
+Как только значение выражения \emph{Варианта} стало равным значению выражения оператора, выполняется список операторов этого \emph{Варианта}.
 Остальные варинты игнорируются.
 Если ни один из вариантов не выполнен, и есть ветка \keyword{иначе}, выполняется список операторов этой ветки.
 
@@ -213,6 +219,21 @@
 }
 \end{Trivil}
 
+\hypertarget{switch-stmt-predicate}{%
+\subsubsection{Оператор 'выбор' по предикатам}\label{stmt:switch-stmt-predicate}}
+
+В этом случае, каждое выражение в \emph{Вариантах} должно быть выражением логического типа. 
+Эти выражения вычисляются  слева направо и сверху вниз до тех пор, когда значение выражения не равно истине. 
+Как только значение выражения стало рано истине, выполняется список операторов этого варианта. Остальные варинты игнорируются.
+Если ни один из вариантов не выполнен, и есть ветка \keyword{иначе}, выполняется список операторов этой ветки.
+
+\begin{Trivil}
+выбор х {
+когда х < 0: вернуть "отрицательное"
+когда х > 0: вернуть "положительное"
+иначе вернуть "ноль"
+}
+\end{Trivil}
 
 \hypertarget{while-stmt}{%
 \subsection{Оператор цикла 'пока' }\label{stmt:while-stmt}}
