синтаксис оператора выбор "иначе" => "другое"
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/03-Лексика.tex
+++ b/doc/report/03-Лексика.tex
@@ -97,13 +97,12 @@
 Следующие ключевые слова зарезервированы и не могут быть использованы, как идентификаторы:
 
 \begin{tabular}[c]{*{5}{p{2cm}}}
-авария &    иначе &    мб &               пока       & типа    \\
-вернуть &  импорт &  модуль &        прервать & фн     \\
-вход  &      класс &     надо &            пусть       &        \\
-выбор &     когда &     настройка &   позже      &        \\                                        
-если  &      конст &    осторожно &  тип          &        \\
+авария   & если     & конст    & осторожно    &  тип   \\
+вернуть & иначе   & мб        &   пока      & типа     \\
+вход      & импорт & модуль  &  прервать &  фн      \\
+выбор   & класс    & надо     &   пусть     &        \\                                        
+другое  & когда    & настройка  & позже     &        \\
 \end{tabular}
-
 
 \hypertarget{ops}{%
 \subsection{Знаки операций и знаки препинания}\label{lex:ops}}
