--- a/doc/report/06-Операторы.tex
+++ b/doc/report/06-Операторы.tex
@@ -187,7 +187,7 @@
 Оператор-выбор: 
     'выбор' Выражение? '{'
     Вариант*
-    ('иначе' Список-операторов?)?
+    ('другое' Список-операторов?)?
     '}'
 Вариант:
     'когда' Выражение (',' Выражение)* ':' Список-операторов?
@@ -215,7 +215,7 @@
 когда 0: вернуть "ничего"
 когда 1: вернуть "один"
 когда 2: вернуть "два"
-иначе вернуть "много"
+другое вернуть "много"
 }
 \end{Trivil}
 
@@ -231,7 +231,7 @@
 выбор х {
 когда х < 0: вернуть "отрицательное"
 когда х > 0: вернуть "положительное"
-иначе вернуть "ноль"
+другое вернуть "ноль"
 }
 \end{Trivil}
 
