--- a/doc/report/06-Операторы.tex
+++ b/doc/report/06-Операторы.tex
@@ -273,11 +273,11 @@
 Оператор \keyword{вернуть} завершает выполнение тела функции, метода или входа, и, возможно, возращает значение.
 
 \begin{Grammar}
-Оператор-вернуть: 'вернуть'  (Выражение | Разделитель)
+Оператор-вернуть: 'вернуть' (Выражение | Разделитель)
 \end{Grammar}
 
 Если оператор \keyword{вернуть} используется в теле входа или в теле функции или метода, в сигнатуре которых не указан тип результата, 
-то выражение в операторе должно отсутствовать.
+то выражение в операторе должно отсутствовать. 
 
 И наоборот, если в оператор используется в теле функции или метода, в сигнатуре которых указан тип результата, выражение должно быть и 
 оно должно быть \emph{совместимо по присваиванию} с типом результата (\See{compat:assign}).
@@ -288,6 +288,25 @@
     вернуть ц * Факториал(ц - 1)
 }
 \end{Trivil}
+
+Если выражение в операторе присутствует, то оно должно начинаться на одной строке с ключевым словом \keyword{вернуть},
+иначе компилятор выдаст ошибку:
+\begin{SampleErr}[vspace=2pt]
+фн цифра?(сим: Символ): Лог {
+    вернуть  // ошибка компиляции
+        '0' <= сим & сим <= '9'
+}
+\end{SampleErr}
+
+А так верно:
+\begin{Trivil}[vspace=2pt]
+фн цифра?(сим: Символ): Лог {
+    вернуть '0' <= сим 
+      & сим <= '9'
+}
+\end{Trivil}
+
+
 
 \hypertarget{crash-stmt}{%
 \subsection{Оператор 'авария' и аварийная ситуация}\label{stmt:crash-stmt}}
