убрал "настройка" из ключевых слов
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/03-Лексика.tex
+++ b/doc/report/03-Лексика.tex
@@ -97,11 +97,11 @@
 Следующие ключевые слова зарезервированы и не могут быть использованы, как идентификаторы:
 
 \begin{tabular}[c]{*{5}{p{2cm}}}
-авария   & если     & конст    & осторожно    &  тип   \\
-вернуть & иначе   & мб        &   пока      & типа     \\
-вход      & импорт & модуль  &  прервать &  фн      \\
-выбор   & класс    & надо     &   пусть     &        \\                                        
-другое  & когда    & настройка  & позже     &        \\
+авария   & если     & конст    & пока    &  типа   \\
+вернуть & иначе   & мб        &   прервать   &   фн    \\
+вход      & импорт & модуль  &  пусть &        \\
+выбор   & класс    & надо     &    позже    &        \\                                        
+другое  & когда    & осторожно  &   тип   &        \\
 \end{tabular}
 
 \hypertarget{ops}{%
