конверсии Строка <-> Строка8 сделаны обычными (не осторожными)
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/04-Описания.tex
+++ b/doc/report/04-Описания.tex
@@ -54,7 +54,7 @@
 
 Типы (\See{decls:predefined-types}):
 \begin{Verbatim}
-    Байт Цел64 Слово64 Вещ64 Лог Символ Строка
+    Байт Цел64 Слово64 Вещ64 Лог Символ Строка Строка8
 \end{Verbatim}
 
 Константы типа Лог (\See{decls:predefined-types}):
@@ -62,7 +62,7 @@
     ложь истина
 \end{Verbatim}
 
-Литерал nullable (\See{decls:mb-types}):
+Литерал, обозначающий отсутствие значения для \emph{может быть} типа (\See{decls:mb-types}):
 \begin{Verbatim}
     пусто
 \end{Verbatim}
@@ -88,7 +88,8 @@
 Вещ64 & множество всех 64-разрядных чисел с плавающей запятой стандарта IEEE-754 \\ 
 Лог & константы \verb|ложь| и \verb|истина| \\ 
 Символ & множество всех Unicode символов \\ 
-Строка & множество всех строковых значений (\See{decls:string-type})
+Строка & множество всех строковых значений (\See{decls:string-type}) \\
+Строка8 & множество всех строковых значений (\See{decls:string-type}) \\
 \end{tabular}
 
 \bigskip
@@ -108,7 +109,50 @@
     пусть сим = с[0] // ошибка
 \end{SampleErr}
 
-Для работы с байтами строки можно использовать тип Строка8 (\See{unsafe:type-string8}).
+Для работы с байтами строки можно использовать тип Строка8 (\See{decls:string8-type}).
+
+\hypertarget{string8-type}{%
+\subsubsection{Тип Строка8}\label{decls:string8-type}}
+
+Тип Строка8 введен для удобной и быстрой работы со строками в стандартных библиотеках. 
+Единственным способом получения значения типа Строка8 является преобразование из строки. 
+Это преобразование выполняется только во время компиляции.
+
+\begin{Trivil}
+пусть с8 = "Привет"(:Строка8)
+\end{Trivil}
+
+Значение типа Строка8 - это неизменяемая, индексируемая последовательность байтов.
+Стандартная функция \verb+длина+ примененная к значению типа Строка8 возвращает число байтов.
+
+\bigskip
+Сравнение типов:
+
+\bigskip
+\begin{tabular}[c]{l|p{3.5cm}|p{3.5cm}}
+& \textbf{Строка} & \textbf{Строка8}  \\ 
+\hline
+Определение &  последовательность символов & последовательность байтов \\
+Индексация & нет & да \\
+\verb+длина+(c) & число символов & число байтов \\
+можно менять & нет & нет \\
+\hline
+\end{tabular}
+
+\begin{Trivil}
+пусть с = "Привет"
+пусть с8 = с(:Строка8)
+
+вывод.ф("%v\n", длина(с)) // выведет: 6
+вывод.ф("%v\n", длина(с8)) // выведет: 12
+вывод.ф("%v\n", с8[0]) // выведет: 0xD0
+\end{Trivil}
+
+Значение типа Строка8 неизменяемое, менять байты в нем нельзя:
+\begin{SampleErr}[vspace=2pt]
+    пусть с8 = "Привет"(:Строка8)
+    с8[0] := 1 // ошибка
+\end{SampleErr}
 
 \hypertarget{type-ref}{%
 \subsection{Указание типа}\label{decls:type-ref}}
