--- a/doc/report/07-СтдФункции.tex
+++ b/doc/report/07-СтдФункции.tex
@@ -7,7 +7,7 @@
 \hypertarget{stdlen}{%
 \subsubsection{Длина}\label{stdfuncs:stdlen}}
 
-Стандартная функция \verb+длина+ возвращает длину строк, векторов и вариативных параметров, см. также (\See{unsafe:type-string8}). Тип результата: Цел64.
+Стандартная функция \verb+длина+ возвращает длину строк, векторов и вариативных параметров, см. также (\See{decls:string8-type}). Тип результата: Цел64.
 
 Длина строки считается в символах. Для остальных типов длина выдает число элементов.
 
