правка таблицы для стд функции тег
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/07-СтдФункции.tex
+++ b/doc/report/07-СтдФункции.tex
@@ -28,8 +28,8 @@
 Тег представлен значением типа Слово64.
 
 \bigskip
-\begin{tabular}[c]{p{4cm}|l|l}
- \multicolumn{2}{l|}{\textbf{Вид аргумента}}   & \textbf{Результат}  \\ 
+\begin{tabular}[c]{p{4.5cm}|l|l}
+ \textbf{Вид аргумента} & \textbf{Пример}  & \textbf{Результат}  \\ 
 \hline
 предопределенный тип & тег(Цел64) &  Тег указанного типа \\
 описанный тип & тег(Байты) &  Тег указанного типа \\
