--- a/doc/report/04-Описания.tex
+++ b/doc/report/04-Описания.tex
@@ -476,13 +476,13 @@
 \subsubsection{Внешние функции}\label{decls:extern-fn}}
 
 Функция, в которой вместо тела стоит модификатор \verb|@внеш|, является \emph{внешней функцией}, то есть реализованной каким-то внешним способом.
-Атрибут "имя" модификатора задает внешнее имя функции.
+Атрибут "имя"\space  модификатора задает внешнее имя функции.
 
 \begin{Trivil}
 фн строка(с: Строка) @внеш("имя":"print_string")
 \end{Trivil}
 
-Если атрибут "имя" не задан, внешнее имя совпадает с идентификатором функции.
+Если атрибут "имя"\space не задан, внешнее имя совпадает с идентификатором функции.
 
 \hypertarget{methods}{%
 \subsection{Описание методов}\label{decls:methods}}
