оператор выбора по типу
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/04-Описания.tex
+++ b/doc/report/04-Описания.tex
@@ -376,8 +376,14 @@
 
 Наследование позволяет определить новый (\emph{расширенный}) класс  на основе существующего (\emph{базового}) класса. 
 
-Базовый класс \emph{Б}, указанный в описании класса \emph{К}, называется \emph{прямым базовым классом}. 
-Так как \emph{Б} может быть, в свою очередь, расширением другого базового класса, для каждого класса определен список базовых классов, возможно, пустой.
+\begin{Trivil}
+тип Работник = класс (Человек) {
+    зарплата := 0.0
+}
+\end{Trivil}
+
+Базовый класс \emph{Человек}, указанный в описании класса \emph{Работник}, называется \emph{прямым базовым классом}. 
+Так как \emph{Человек} может быть, в свою очередь, расширением другого базового класса, для каждого класса определен список базовых классов, возможно, пустой.
 Термин \emph{базовый класс} будет использовать для обозначения любого класса из этого списка. Циклы в списке базовых классов запрещены.
 
 Расширенный класс наследует поля и методы базового класса и может добавлять новые поля и методы.
