--- a/doc/report/06-Операторы.tex
+++ b/doc/report/06-Операторы.tex
@@ -181,32 +181,46 @@
 \hypertarget{switch-stmt}{%
 \subsection{Оператор 'выбор'}\label{stmt:switch-stmt}}
 
-Оператор \keyword{выбор} выбирает одну ветвь выполнения из нескольких вариантов.
+Оператор \keyword{выбор} выбирает одну ветвь выполнения из нескольких вариантов. 
 
 \begin{Grammar}
-Оператор-выбор: 
-    'выбор' Выражение? '{'
+Оператор-выбор
+    : Выбор-по-выражению 
+    | Выбор-по-предикатам
+    | Выбор-по-типу
+\end{Grammar}
+
+Есть три разновидности оператора выбора
+\begin{d_itemize}
+\item
+    \emph{выбор по выражению} (\See{stmt:switch-stmt-expr})
+\item
+    \emph{выбор по предикатам} (\See{stmt:switch-stmt-predicate})
+\item
+    \emph{выбор по типу} (\See{stmt:switch-stmt-type})
+\end{d_itemize}
+ 
+\hypertarget{switch-stmt-expr}{%
+\subsubsection{Выбор по выражению}\label{stmt:switch-stmt-expr}}
+
+В операторе \emph{выбор по выражению} выбор идет по по значению выражения оператора (значение сравнивается со значениями выражений в вариантах).
+
+\begin{Grammar}
+Выбор-по-выражению: 
+    'выбор' Выражение '{'
     Вариант*
     ('другое' Список-операторов?)?
     '}'
 Вариант:
-    'когда' Выражение (',' Выражение)* ':' Список-операторов?
+    'когда' Выражение (',' Выражение)* ':' 
+    Список-операторов?
 \end{Grammar}
 
-Если  \emph{Выражение} после ключевого слова \keyword{выбор} задано, 
-то выбор идет по по значению этого выражения (\See{stmt:switch-stmt-expr}), иначе выбор по предикатам (\See{stmt:switch-stmt-predicate}).
-
-\bigskip
-\TBD: Добавить оператор выбора по типу?
-
-\hypertarget{switch-stmt-expr}{%
-\subsubsection{Оператор 'выбор' по выражению}\label{stmt:switch-stmt-expr}}
-
-При выполнении оператора \keyword{выбор} вычисляется \emph{Выражение} оператора,
+При выполнении вычисляется \emph{Выражение} оператора,
 затем выражения в \emph{Вариантах} вычисляются слева направо и сверху вниз. 
 Как только значение выражения \emph{Варианта} стало равным значению выражения оператора, выполняется список операторов этого \emph{Варианта}.
 Остальные варинты игнорируются.
-Если ни один из вариантов не выполнен, и есть ветка \keyword{иначе}, выполняется список операторов этой ветки.
+Если ни один из вариантов не выполнен, и есть ветка \keyword{другое}, выполняется список операторов этой ветки.
 
 Тип каждого выражения в вариантах должен быть равен эквивалентен типу первого выражения (\See{compat:equal-types}).
 
@@ -220,18 +234,101 @@
 \end{Trivil}
 
 \hypertarget{switch-stmt-predicate}{%
-\subsubsection{Оператор 'выбор' по предикатам}\label{stmt:switch-stmt-predicate}}
+\subsubsection{Выбор по предикатам}\label{stmt:switch-stmt-predicate}}
+
+Если выражение после ключевого слова \keyword{выбор} отсутствует, 
+то это оператор \emph{выбора по предикатам}.
+
+\begin{Grammar}
+Выбор-по-выражению: 
+    'выбор' '{'
+    Вариант*
+    ('другое' Список-операторов?)?
+    '}'
+Вариант:
+    'когда' Выражение (',' Выражение)* ':' 
+    Список-операторов?
+\end{Grammar}
 
 В этом случае, каждое выражение в \emph{Вариантах} должно быть выражением логического типа. 
 Эти выражения вычисляются  слева направо и сверху вниз до тех пор, когда значение выражения не равно истине. 
 Как только значение выражения стало рано истине, выполняется список операторов этого варианта. Остальные варинты игнорируются.
-Если ни один из вариантов не выполнен, и есть ветка \keyword{иначе}, выполняется список операторов этой ветки.
+Если ни один из вариантов не выполнен, и есть ветка \keyword{другое}, выполняется список операторов этой ветки.
 
 \begin{Trivil}
 выбор х {
 когда х < 0: вернуть "отрицательное"
 когда х > 0: вернуть "положительное"
 другое вернуть "ноль"
+}
+\end{Trivil}
+
+\hypertarget{switch-stmt-type}{%
+\subsubsection{Выбор по типу}\label{stmt:switch-stmt-type}}
+
+В операторе \emph{выбор по типу} выбор ветви выполнения происходит по типу выражения.
+
+\begin{Grammar}
+Выбор-по-выражению: 
+    'выбор' Переменная-варианта? 'тип' Выражение '{'
+    Вариант-типа*
+    ('другое' Список-операторов?)?
+    '}'
+Переменная-варианта:    
+    'пусть' Идентификатор ':'
+Вариант-типа:
+    'когда' Указ-типа (',' Указ-типа)* ':' 
+    Список-операторов?
+\end{Grammar}
+
+Рассмотрим сначала оператор, в котором \emph{переменная варианта} не указана.
+
+При выполнении такого оператора вычисляется \emph{Выражение}, тип которого должен быть типом класса (\See{decls:class-types}).
+Для дальнейшего сравнения используется тип объекта, то есть тип, с которым объект был создан, иначе говоря, динамический тип.
+
+В следующем примере для сравнения будет использовать тип \verb+К2+, так как это тип объекта \verb+к+:
+\begin{Trivil}[vspace=2pt]
+тип К1 = класс {}
+тип К2 = класс (К1) {}
+вход{
+    пусть к: К = К2{}
+    выбор тип к { ... }
+}
+\end{Trivil}
+
+Динамический тип выражения сравнивается слева направо и сверху вниз на равенство типам, указанным в вариантах.
+Как только один из типов \emph{Варианта} оказался равен типу выражения, выполняется список операторов этого \emph{Варианта}.
+Остальные варинты игнорируются.
+Если ни один из вариантов не выполнен, и есть ветка \keyword{другое}, выполняется список операторов этой ветки.
+
+ Сравнение типа выражение оператора выполняется на строгое равентсво, наследование не учитывается. 
+ Таким образом, в примере сработает ветка \verb+когда К2+, независимо от порядка веток в операторе.
+\begin{Trivil}[vspace=2pt]
+тип К1 = класс {}
+тип К2 = класс (К1) {}
+вход{
+    пусть к: К = К2{}
+    выбор тип к { 
+    когда К1: 
+    когда К2: // сработает эта ветка
+    }
+}
+\end{Trivil}
+
+Если в операторе указана \emph{переменная варианта}, то в каждой ветки исполнения 
+(но не в ветке \keyword{другое}) будет доступна переменная с именем, заданным идентификатором,
+ и типом, указанном в варианте. При этом в варианте должен быть указан только один тип.
+ 
+\begin{Trivil}
+тип Человек = класс { имя := "" }
+тип Работник = класс (Человек) {
+    зарплата := 0.0
+}
+фн зарплата(чел: Человек): Вещ64 {
+    выбор пусть х: тип чел { 
+    когда Работник: вернуть х.зарплата
+    другое вернуть 0.0
+    }
 }
 \end{Trivil}
 
