--- a/doc/report/04-Описания.tex
+++ b/doc/report/04-Описания.tex
@@ -82,7 +82,7 @@
 \smallskip
 \begin{tabular}[c]{l|l}
 \textbf{Тип} & \textbf{Множество значений} \\ \hline
-Байт &  множество целых числа от 0 до 255   \\
+Байт &  множество целых чисел от 0 до 255   \\
 Цел64 & множество всех 64-битных знаковых целых чисел \\
 Слово64 & множество всех 64-битных беззнаковых целых чисел  \\ 
 Вещ64 & множество всех 64-разрядных чисел с плавающей запятой стандарта IEEE-754 \\ 
