--- a/doc/report/08-Модули.tex
+++ b/doc/report/08-Модули.tex
@@ -100,7 +100,7 @@
 \TBD: описать: переменные с поздней инициализацией
 \bigskip
 
-Система выполняет должна обеспечивать следующие условия инициализации модуля М:
+Система должна обеспечивать следующие условия инициализации модуля М:
 \begin{d_itemize}
 \item
     инициализация модуля выполняется один раз
