цикл-среди и мелкие правки
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/03-Лексика.tex
+++ b/doc/report/03-Лексика.tex
@@ -97,11 +97,11 @@
 Следующие ключевые слова зарезервированы и не могут быть использованы, как идентификаторы:
 
 \begin{tabular}[c]{*{5}{p{2cm}}}
-авария   & если     & конст    & пока    &  типа   \\
-вернуть & иначе   & мб        &   прервать   &   фн    \\
-вход      & импорт & модуль  &  пусть &        \\
-выбор   & класс    & надо     &    позже    &        \\                                        
-другое  & когда    & осторожно  &   тип   &        \\
+авария   & если     & конст    & пока          &  тип    \\
+вернуть & иначе   & мб        &   прервать  &   типа    \\
+вход      & импорт & модуль  &  пусть      &   фн     \\
+выбор   & класс    & надо     &    позже     &   цикл     \\                                        
+другое  & когда    & осторожно  & среди    &        \\
 \end{tabular}
 
 \hypertarget{ops}{%
