--- a/doc/report/05-Выражения.tex
+++ b/doc/report/05-Выражения.tex
@@ -109,7 +109,7 @@
 Индексация: '[' Выражение '['
 \end{Grammar}    
 
-Выражении \verb|что-то[индекс]| обозначает элемент вектора или вариативного параметра, индекс которого определяется выражением \verb|индекс|.
+Выражение \verb|что-то[индекс]| обозначает элемент вектора или вариативного параметра, индекс которого определяется выражением \verb|индекс|.
 \begin{d_itemize}
 \item
     \verb|что-то| должно быть идентификатором, обозначающим вариативный параметр
