--- a/doc/report/06-Операторы.tex
+++ b/doc/report/06-Операторы.tex
@@ -11,6 +11,7 @@
     | Оператор-надо
     | Оператор-выбор
     | Оператор-пока
+    | Оператор-цикл
     | Оператор-вернуть
     | Оператор-прервать
     | Оператор-авария
@@ -332,8 +333,11 @@
 }
 \end{Trivil}
 
+Переменная варианта является \emph{переменной с единственным присваиванием}, 
+её значение изменить нельзя.
+
 \hypertarget{while-stmt}{%
-\subsection{Оператор цикла 'пока' }\label{stmt:while-stmt}}
+\subsection{Оператор 'пока' }\label{stmt:while-stmt}}
 
 Оператор \keyword{пока} определяет повторное выполнение блока до тех пор, пока значение логического выражение равно \verb+истина+. 
 Выражение вычисляется перед каждой итерацией.
@@ -347,6 +351,53 @@
     а := а * 2
 }
 \end{Trivil}
+
+\hypertarget{cycle-stmt}{%
+\subsection{Оператор цикл }\label{stmt:cycle-stmt}}
+
+Оператор \keyword{цикл} определяет выполнение блока для всех элементов вектора или другого \emph{индексируемого} объекта. 
+
+\begin{Grammar}
+Оператор-цикл: 
+    'цикл'  ПеременныеЦикла 'среди' Выражение Блок 
+ПеременныеЦикла
+    : ПеременнаяЦикла
+    | '[' ПеременнаяЦикла ']' ПеременнаяЦикла?
+ПеременнаяЦикла: Идентификатор    
+\end{Grammar}
+
+Выражение цикла должно быть \emph{индексируемым}:
+\begin{d_itemize}
+\item
+    тип выражения должен быть типом вектора 
+\item
+    или выражение должно обозначать вариативный параметр.
+\end{d_itemize}
+
+Оператор позволяет задать две переменные цикла или только одну из них. 
+В теле цикла, значением \emph{переменной индекса}, заданной в квадратных скобках, является текущий индекс (от 0 до длины-1), 
+а \emph{переменной элемента} - значение элемента по этому индексу.
+
+Типы переменных цикла задаются неявно:
+\begin{d_itemize}
+\item
+    тип переменной индекса есть \verb+Цел64+
+\item
+    тип переменной элемента равен типу элемента индексируемого выражения
+\end{d_itemize}
+
+\TBD: Надо ли задавать типы переменных цикла явно?
+
+\begin{Trivil}
+пусть числа = Числа[9, 8, 7]
+цикл [№]число среди числа {
+    вывод.ф("%v:%v, ", №, число)
+}
+// вывод: 0:9, 1:8, 2:7,
+\end{Trivil}
+
+Каждая переменная цикла является \emph{переменной с единственным присваиванием}, 
+её значение в теле цикла изменить нельзя.
 
 \hypertarget{break-stmt}{%
 \subsection{Оператор 'прервать'}\label{stmt:break-stmt}}
