--- a/doc/report/09-Обобщенные.tex
+++ b/doc/report/09-Обобщенные.tex
@@ -77,7 +77,7 @@
 \end{Trivil}
 
 \hypertarget{generic-impl}{%
-\subsection{Заметки о следствиях и реализации}\label{generic:generic-impl}}
+\subsection{Последствия принятого решения}\label{generic:generic-impl}}
 
 Сравнение подхода с другими известными подходами выходит за рамки описания языка. 
 Замечу только, что главной причиной выбора такого подхода является тривиальность реализации и простота использования.
