--- a/doc/report/06-Операторы.tex
+++ b/doc/report/06-Операторы.tex
@@ -366,7 +366,7 @@
 ПеременнаяЦикла: Идентификатор    
 \end{Grammar}
 
-Выражение цикла должно быть \emph{индексируемым}:
+Выражение цикла должно быть \emph{индексируемым}, то есть
 \begin{d_itemize}
 \item
     тип выражения должен быть типом вектора 
