добавил выходные параметры
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/04-Описания.tex
+++ b/doc/report/04-Описания.tex
@@ -437,8 +437,6 @@
 \begin{Grammar}
 Описание-функции: 'фн' Идент-оп Сигнатура Тело
 Сигнатура: '(' Список-параметров? ')' Тип-результата?
-Список-параметров: Параметр (',' Параметр)* ','?
-Параметр: Идентификатор ':' '...'? ('*' | Указ-типа)  
 Тело: (Блок | Модификатор)?
 \end{Grammar} 
 
@@ -459,10 +457,43 @@
 Формальные параметры - это идентификаторы, которые обозначают \emph{аргументы} (фактические параметры), указанные при вызове функции (\See{expr:call}).
 
 \begin{Grammar}
-Параметр: Идентификатор ':' '...'? ('*' | Указ-типа)  
+Список-параметров: Параметр (',' Параметр)* ','?
+Параметр: 
+    Идентификатор (':' | ':=') '...'? ('*' | Указ-типа)  
 \end{Grammar} 
 
+Параметры бывают двух видов: \emph{входные} и \emph{выходные} параметры. 
+Вид параметра задается символом после идентификатора, 
+задающего имя параметра. Для входных параметров это символ ':', для выходных - символ ':='. 
+Выходной параметр, в более привычной терминологии,
+является \emph{in out} параметром. 
+
+Аргументом для входного параметра должно быть выражение, тип которого совместим по присваиванию с типом параметра. 
+Аргументом для выходного параметра должно быть \emph{изменяемое выражение} (\See{stmt:assignment}), 
+тип которого эквивалентен типу параметра. 
+
+В теле функции, входной параметр имеет значение, которое передается в функцию, 
+изменяется функцией и передается обратно из функции для замены исходного значения.
+
+
+\begin{Trivil}
+фн извлечь число(стр: Строка, число:= Цел64): Лог {...}
+
+пусть рез := 0
+если ~ извлечь число(с, рез) {
+    вывод.ф("не удалось извлечь число")
+}
+\end{Trivil}
+
 Последний параметр функции может иметь тип с префиксом \verb|...| - это \emph{вариативный параметр}. Функция с таким параметром может быть вызвана с нулем или более аргументов для этого параметра. Если тип вариативного параметра указан как \emph{Т}, то в теле функции типом  параметра является \verb+[]T+.
+
+\begin{Trivil}
+фн сумма(числа: ...Цел64): Цел64 {...}
+
+// В вызове можно указать любое число аргументов
+ответ := сумма() // без аргументов
+ответ := сумма(1, 2, 3) //  три аргумента
+\end{Trivil}
 
 \hypertarget{params-poly}{%
 \subsubsection{Полиморфные параметры}\label{decls:params-poly}}
