операция "типа" разрешена для мб типов
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/05-Выражения.tex
+++ b/doc/report/05-Выражения.tex
@@ -430,8 +430,12 @@
 \hypertarget{of-type}{%
 \subsection{Проверка типа}\label{expr:of-type}}
 
-Операция \emph{проверка типа} применима к выражению типа класс и проверяет, что \emph{динамический} тип объекта равен типу, указанному в операции, 
-или является расширением этого типа. Тип, указанный в операции, должен быть типом класса.
+Операция \emph{проверка типа} применима к операнду типа класс или \emph{мб} класс. Тип, указанный в операции справа, должен быть типом класса.
+Тип результата - логический.
+
+Для операнда \emph{мб} типа со значением \verb+'пусто'+ операция возвращает  \verb+ложь+. 
+Иначе, операция проверяет, что \emph{динамический} тип объекта равен типу, 
+указанному в операции, или является расширением этого типа и возвращает значение \verb+истина+, если это так.
 
 \begin{Grammar}
 Проверка-типа: Выражение 'типа' Указ-типа 
@@ -443,9 +447,11 @@
 
 пусть к1: К1 = К1{}
 пусть к2: К1 = К2{}
+пусть к3: мб К1 = пусто
 
 пусть б :=  к1 типа К2 // ложь
 б := к2 типа К2 // истина
+б := к3 типа К2 // ложь
 \end{Trivil}
 
 
