сравнение для Лог
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/05-Выражения.tex
+++ b/doc/report/05-Выражения.tex
@@ -525,6 +525,7 @@
 \begin{tabular}[c]{r|l}
 \textbf{Тип левого операнда} & \textbf{Правый операнд}  \\ 
 \hline
+Лог & операнд типа Лог \\
 Строка & операнд типа Строка \\
 класс \emph{Т} & операнд типа \emph{Т} \\
 \keyword{мб} \emph{Т} & 'пусто' или операнд типа \keyword{мб} \emph{Т} \\
