разрешено использовать мб Класс в преобразовании типа
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/05-Выражения.tex
+++ b/doc/report/05-Выражения.tex
@@ -168,7 +168,8 @@
 \hline
 \verb+[]+Символ & Строка  & всегда \\
 \hline
-Класс & Класс & От базового класса к расширенному \\
+\multirow{2}*{Класс Ц} & Класс К & К является базовым классом класса Ц \\
+    & \keyword{мб} К, где К - класс & значение не равно пусто, и К является базовым классом класса Ц \\
 \hline
 \end{tabular}
 
