полиморфный результат функции
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/04-Описания.tex
+++ b/doc/report/04-Описания.tex
@@ -437,12 +437,17 @@
 \begin{Grammar}
 Описание-функции: 'фн' Идент-оп Сигнатура Тело
 Сигнатура: '(' Список-параметров? ')' Тип-результата?
+Тип-результата: ':' ('*' | Указ-типа)
 Тело: (Блок | Модификатор)?
 \end{Grammar} 
 
 Вместо тела функции может стоять модификтор (\See{lex:modifiers}) \verb|@внеш|, см. \See{decls:extern-fn}.
 
-Если у функции задан тип результата, тело функции должно завершаться операторами \keyword{вернуть} (\See{stmt:return-stmt}) или \keyword{авария} (\See{stmt:crash-stmt}).
+Если у функции задан тип результата, тело функции должно завершаться операторами \keyword{вернуть} (\See{stmt:return-stmt}) или \keyword{авария} (\See{stmt:crash-stmt}). 
+
+Если в типе результата вместо указания типа использован символ \verb|'*'|, то функция возвращает полиморфный результат.
+Такая функция может возвращать значение любого типа.
+Для работы с полиморфным значением определены специальные стандартные функции (\See{stdfuncs:stdpoly}).
 
 \begin{Trivil}
 фн Факториал(ц: Цел64): Цел64 {
