--- a/doc/report/report.tex
+++ b/doc/report/report.tex
@@ -4,9 +4,12 @@
   Алексей Недоря
 }
 
-\def\reportDate{25.06.2023}
+\def\reportDate{25.09.2023}
 
-\title{Язык программирования \thelang{}}
+\title{Язык программирования \thelang{} \\
+\bigskip
+\large Версия языка: 0.91
+}
 \date{\reportDate}
 
 \begin{document}
@@ -27,8 +30,8 @@
 \include{10-Совместимость}
 \include{11-Небезопасные}
 
-%\appendix
-%\include{A1-Установка}
+\appendix
+\include{А1-Версии}
 
 \printindex
 
