тип Пусто, версии языка и компилятора
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/04-Описания.tex
+++ b/doc/report/04-Описания.tex
@@ -54,7 +54,7 @@
 
 Типы (\See{decls:predefined-types}):
 \begin{Verbatim}
-    Байт Цел64 Слово64 Вещ64 Лог Символ Строка Строка8
+    Байт Цел64 Слово64 Вещ64 Лог Символ Строка Строка8 Пусто
 \end{Verbatim}
 
 Константы типа Лог (\See{decls:predefined-types}):
@@ -90,6 +90,7 @@
 Символ & множество всех Unicode символов \\ 
 Строка & множество всех строковых значений (\See{decls:string-type}) \\
 Строка8 & множество всех строковых значений (\See{decls:string-type}) \\
+Пусто & литерал \verb+пусто+ \\
 \end{tabular}
 
 \bigskip
