--- a/doc/report/А1-Версии.tex
+++ b/doc/report/А1-Версии.tex
@@ -1,8 +1,15 @@
 \hypertarget{versions}{%
 \section{Версии языка}\label{versions:chapter}}
 
+\hypertarget{v090}{%
+\subsection{Версия 0.9.0 от 07.09.2023}\label{versions:v090}}
+
+\begin{d_itemize}
+\item Добавлен тип Пусто с единственным значением - литералом \verb+пусто+  (\See{decls:predefined-types})
+\end{d_itemize}
+
 \hypertarget{v091}{%
-\subsection{Версия 0.91 от 05.09.2023}\label{versions:v091}}
+\subsection{Версия 0.9.1 от 07.09.2023}\label{versions:v091}}
 
 \begin{d_itemize}
 \item Разрешен возврат из функции полиморфного типа  (\See{decls:functions})
