преобразование полиморфного значения к любому типу
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/05-Выражения.tex
+++ b/doc/report/05-Выражения.tex
@@ -138,46 +138,61 @@
 Если в преобразование есть ключевое слово \keyword{осторожно}, то это небезопасная операция, которая рассматривается отдельно (\See{unsafe:conversions}).
 
 Часть преобразований, например, преобразования между числовыми типами и символами, а так же строковые преобразования могут изменить 
-представление значения первичного выражения и повлечь за собой затраты на выполнение, а так же \emph{аварийное завершение}, если выполнить преобразование невозможно.
+представление значения первичного выражения и повлечь за собой затраты на выполнение.
 
-Преобразование классов изменяют только тип, но не представление значения.
+Преобразование может привести к \emph{аварийному завершению}, если условие преобразования не выполнено, см. столбец \textbf{Условие выполнения} в таблице. Если в столбце  указано 'нет условия', то преобразование не может привести к \emph{аварийному завершению}.
 
 \bigskip
 Разрешенные преобразования:
+\smallskip
 
-\begin{tabular}[c]{p{2cm}|p{4.5cm}|p{4cm}}
+\begin{tabular}[c]{p{2cm}|p{5cm}|p{6cm}}
 \textbf{Целевой тип} & \textbf{Тип выражения} &  \textbf{Условие выполнения} \\ 
 \hline
 Байт & Цел64, Слово64, Символ, Строковый литерал длины 1 & значение в диапазоне 0..255 \\
 \hline
-\multirow{3}*{Цел64} & Байт, Символ, Строковый литерал длины 1 & всегда \\ 
- & Слово64 & значение в диапазоне 0..Max(Цел64) \\
- & Вещ64  & всегда \\
+Цел64 & Байт, Символ, Строковый литерал длины 1 & нет условия \\ 
 \hline
-\multirow{2}*{Слово64} & Байт, Символ, Строковый литерал длины 1 & всегда \\
-   & Цел64 & не отрицательное значение \\
+Цел64 & Слово64 & значение в диапазоне 0..Max(Цел64) \\
 \hline
-Вещ64 & Цел64 & всегда \\
+Цел64 & Вещ64  & нет условия \\
 \hline
-\multirow{2}*{Символ} &  Байт, Строковый литерал длины 1 & всегда \\
-    & Цел64, Слово64 & значение в диапазоне Unicode символа \\
+Слово64 & Байт, Символ, Строковый литерал длины 1 & нет условия \\
 \hline
-Строка & Символ, \verb+[]+Символ, \verb+[]+Байт & всегда \\
+Слово64 & Цел64 & не отрицательное значение \\
 \hline
-\verb+[]+Байт & Строка, Символ  & всегда \\
+Вещ64 & Цел64 & нет условия \\
+\hline
+Символ &  Байт, Строковый литерал длины 1 & нет условия \\
+\hline
+Символ & Цел64, Слово64 & значение в диапазоне, разрешенном для Unicode символа \\
+\hline
+Строка & Символ, \verb+[]+Символ, \verb+[]+Байт & нет условия \\
+\hline
+\verb+[]+Байт & Строка, Символ  & нет условия \\
 \hline
 \verb+[]+Символ & Строка  & всегда \\
 \hline
-\multirow{2}*{Класс Ц} & Класс К & К является базовым классом класса Ц \\
-    & \keyword{мб} К, где К - класс & значение не равно пусто, и К является базовым классом класса Ц \\
+Класс Ц & Класс К & К является базовым классом класса Ц \\
+\hline
+Класс Ц & \keyword{мб} К, где К - класс & значение не равно пусто, и К является базовым классом класса Ц \\
+\hline
+произвольный тип \emph{Т} & полиморфный тип (*) & полиморфное значение содержит значение типа \emph{Т} \\
 \hline
 \end{tabular}
+
+\bigskip
+Преобразование к типу класса изменяет только тип (статический тип объекта), но не представление значения.
 
 \begin{Trivil}
 тип Байты = []Байт
 пусть байты = "Привет"(:Байты)
 
 пусть три = pi(:Цел64)
+
+фн хочу целое(п: *) {
+    пусть к = п(:Цел64)
+}
 \end{Trivil}
 
 \hypertarget{call}{%
