--- a/doc/report/А1-Версии.tex
+++ b/doc/report/А1-Версии.tex
@@ -9,8 +9,9 @@
 \end{d_itemize}
 
 \hypertarget{v091}{%
-\subsection{Версия 0.9.1 от 07.09.2023}\label{versions:v091}}
+\subsection{Версия 0.9.1 от 08.09.2023}\label{versions:v091}}
 
 \begin{d_itemize}
-\item Разрешен возврат из функции полиморфного типа  (\See{decls:functions})
+\item Разрешен возврат полиморфного типа из функции  (\See{decls:functions})
+\item Разрешено преобразование типа из значения полиморфного типа к произвольному типу  (\See{expr:conversion})
 \end{d_itemize}
