добавил многострочные литералы
Signed-off-by: alekseinedoria <aleksei.nedoria@yandex.ru>

--- a/doc/report/03-Лексика.tex
+++ b/doc/report/03-Лексика.tex
@@ -146,7 +146,7 @@
 \hypertarget{strlit}{%
 \subsection{Строковые литералы}\label{lex:strlit}}
 
-Строковый литерал - это последовательность символов, заключенные в двойные кавычки. Строковый литерал может содержать символы, закодированные с помощью escape-последовательности, которая начинается с символа \verb+'\'+.
+Строковый литерал - это последовательность символов, заключенные в двойные кавычки. Строковый литерал может содержать символы, закодированные с помощью escape-последовательности, которая начинается с символа \verb+'\'+. Строковый литерал должен целиком находиться на одной строке текста.
 
 \begin{Grammar}
 Строковый-литерал
@@ -163,6 +163,29 @@ Escape
 \end{Grammar}  
 
 Тип строкового литерала: \verb+Строка+ (\See{decls:predefined-types}). 
+
+\hypertarget{multistrlit}{%
+\subsection{Многострочные литералы}\label{lex:multistrlit}}
+
+Многострочный литерал - это последовательность символов, заключенные в обратные кавычки:  \verb+`Привет`+. 
+Последовательность может содержать любой символ, кроме обратной кавычки.
+
+\begin{Grammar}
+Многострочный-литерал
+    : '`' (~('`' )* '`' 
+\end{Grammar}  
+
+В многострочном литерале escape-последовательности не обрабатываются.
+В частности, обратная косая черта не имеет выделенного значения и строка может содержать символ конца строка (\verb+\n+).
+Последовательность \verb+\r\n+ заменяется на \verb+\n+, а одиночный символ \verb+\r+ игнорируется (не попадают в литерал).
+
+\begin{Trivil}
+`это длинный
+многострочный литерал,
+содержащий символы конца строки`
+\end{Trivil}
+
+Тип многострочного  литерала: \verb+Строка+ (\See{decls:predefined-types}). 
 
 \hypertarget{symlit}{%
 \subsection{Символьные литералы}\label{lex:symlit}}
