--- a/doc/report/04-Описания.tex
+++ b/doc/report/04-Описания.tex
@@ -89,7 +89,7 @@
 Лог & константы \verb|ложь| и \verb|истина| \\ 
 Символ & множество всех Unicode символов \\ 
 Строка & множество всех строковых значений (\See{decls:string-type}) \\
-Строка8 & множество всех строковых значений (\See{decls:string-type}) \\
+Строка8 & множество всех строковых значений (\See{decls:string8-type}) \\
 Пусто & литерал \verb+пусто+ \\
 \end{tabular}
 
