--- a/doc/report/А1-Версии.tex
+++ b/doc/report/А1-Версии.tex
@@ -15,3 +15,11 @@
 \item Разрешен возврат полиморфного типа из функции  (\See{decls:functions})
 \item Разрешено преобразование типа из значения полиморфного типа к произвольному типу  (\See{expr:conversion})
 \end{d_itemize}
+
+\hypertarget{v092}{%
+\subsection{Версия 0.9.2 от 08.10.2023}\label{versions:v090}}
+
+\begin{d_itemize}
+\item Добавлены многострочные литералы (\See{lex:multistrlit})
+\end{d_itemize}
+
